[package]
name = "EvtRustler"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
clap = { version = "4.2.7", features = ["derive"] }
csv = "1.2.1"
rayon = "1.7.0"
regex = "1.8.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
xmltree = "0.10.3"

[dependencies.windows]
version = "0.48"
features = [
	"Win32_System_EventLog",
	"Win32_Foundation"
]
